Add link to sales report in index.html

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 <div class="apps">
    <a href="POSVTA4/MONITORTICKETS.html"> VISOR TICKETS 2 </a>
   </div>
+  <div class="apps">
+   <a href="POSVTA4/REPORTE-CORTE-V1.2.html"> REPORTE DE VENTAS PARA FACTURAR </a>
+  </div>
     <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
