--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
    <a href="POSVTA4/MONITORTICKETS.html"> VISOR TICKETS 2 </a>
   </div>
   <div class="apps">
-   <a href="POSVTA4/REPORTE-CORTE-V1.2.html"> REPORTE DE VENTAS PARA FACTURAR </a>
+   <a href="POSVTA4/REPORTE-CORTE-V1.2.html"> REPORTE DE VENTAS PARA FACTURAR V4 </a>
   </div>
     <footer>
     Powered by <b>PROVSOFT</b>
