--- a/POSVTA4/TRANSFESPOS4.html
+++ b/POSVTA4/TRANSFESPOS4.html
@@ -109,11 +109,12 @@
 <div class="contenedor">
 
   <!-- SECCIÓN RUTA -->
-  <select id="ruta">
-    <option value="">Seleccione ruta</option>
-    <option value="RUTA1">Ruta 1</option>
-    <option value="RUTA2">Ruta 2</option>
-  </select>
+<select id="ruta">
+  <option value="">Seleccione ruta</option>
+  <option value="Almacen_Ruta_1">Ruta 1</option>
+  <option value="Almacen_Ruta_2">Ruta 2</option>
+  <option value="Almacen_Ruta_3">Ruta 3</option>
+</select>
 
   <input id="vendedor" placeholder="Vendedor asignado" readonly>
 
