--- a/POSVTA4/TRANSFESPOS4.html
+++ b/POSVTA4/TRANSFESPOS4.html
@@ -93,12 +93,236 @@
   }
 </style>
 
-<!-- 🔥 AQUÍ VA TU SCRIPT COMPLETO (NO LO MODIFIQUÉ) -->
+<!-- 🔥 SCRIPT COMPLETO -->
 <script type="module">
-/* TODA TU LÓGICA JS AQUÍ...  
-   (LO DEJÉ EXACTAMENTE COMO LO MANDASTE,
-    SOLO LE QUITÉ EL DUPLICADO DE cargarVendedor())
-*/
+
+/* ==========================================================
+   🟦 FIREBASE
+========================================================== */
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getFirestore, collection, query, where, getDocs, addDoc }
+  from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
+  authDomain: "inventariopv-643f1.firebaseapp.com",
+  projectId: "inventariopv-643f1",
+  storageBucket: "inventariopv-643f1.appspot.com",
+  messagingSenderId: "96242533231",
+  appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+
+/* ==========================================================
+   🟩 INDEXEDDB OFFLINE
+========================================================== */
+function openDB() {
+  return new Promise((resolve, reject) => {
+    const request = indexedDB.open("provsoftDB", 1);
+    request.onupgradeneeded = e => {
+      const db = e.target.result;
+      if (!db.objectStoreNames.contains("productos")) {
+        db.createObjectStore("productos", { keyPath: "codigoBarra" });
+      }
+    };
+    request.onsuccess = e => resolve(e.target.result);
+    request.onerror = e => reject(e);
+  });
+}
+
+async function saveProductos(lista) {
+  const db = await openDB();
+  const tx = db.transaction("productos", "readwrite");
+  const store = tx.objectStore("productos");
+  lista.forEach(p => store.put(p));
+  return new Promise(resolve => tx.oncomplete = resolve);
+}
+
+async function getAllProductos() {
+  const db = await openDB();
+  return new Promise(resolve => {
+    const tx = db.transaction("productos", "readonly");
+    const store = tx.objectStore("productos");
+    const req = store.getAll();
+    req.onsuccess = () => resolve(req.result);
+  });
+}
+
+async function syncProductos() {
+  try {
+    const q = query(collection(db, "productos"), where("activo", "==", true));
+    const snap = await getDocs(q);
+    if (!snap.empty) {
+      const lista = snap.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+      await saveProductos(lista);
+      localStorage.setItem("ultimaSync", new Date().toISOString());
+      console.log(`Catálogo actualizado: ${lista.length} productos`);
+    }
+  } catch (err) {
+    console.warn("Error al sincronizar:", err.message);
+  }
+}
+
+
+/* ==========================================================
+   🟨 EQUIVALENTES + BALANZA
+========================================================== */
+function decodificarBalanza(codigo) {
+  if (codigo.length === 13 && codigo.startsWith("20")) {
+    const codigoProducto = codigo.substring(0, 7);
+    const pesoBruto = codigo.substring(7, 12);
+    const pesoKg = parseFloat(pesoBruto) / 1000;
+    return { esBalanza: true, codigoProducto, pesoKg };
+  }
+  return { esBalanza: false };
+}
+
+function normalizarCodigo(producto, codigoEscaneado) {
+  const principal = String(producto.codigoBarra || "");
+  const equivalentes = Array.isArray(producto.codigosEquivalentes)
+    ? producto.codigosEquivalentes.map(String)
+    : [];
+
+  if (principal === codigoEscaneado) return principal;
+  if (equivalentes.includes(codigoEscaneado)) return principal;
+  return null;
+}
+
+
+/* ==========================================================
+   🟧 BÚSQUEDA CÓDIGO / NOMBRE
+========================================================== */
+async function buscarPorCodigo() {
+  let codigo = document.getElementById("buscador").value.trim();
+  if (!codigo) return;
+
+  const bal = decodificarBalanza(codigo);
+  let pesoDetectado = null;
+
+  if (bal.esBalanza) {
+    codigo = bal.codigoProducto;
+    pesoDetectado = bal.pesoKg;
+  }
+
+  const productos = await getAllProductos();
+  const encontrado = productos.find(p => normalizarCodigo(p, codigo));
+
+  if (encontrado) {
+    seleccionarProducto(encontrado);
+    if (pesoDetectado !== null)
+      document.getElementById("cantidad").value = pesoDetectado.toFixed(3);
+  } else {
+    document.getElementById("preview").innerText = "❌ No encontrado";
+  }
+
+  document.getElementById("buscador").value = "";
+}
+
+function buscarPorNombre() {
+  document.getElementById("modalResultados").style.display = "flex";
+  document.getElementById("busquedaNombre").focus();
+}
+
+
+/* ==========================================================
+   🟥 SELECCIÓN + CARRITO
+========================================================== */
+let carrito = [];
+let resultadosBusqueda = [];
+let paginaActual = 0;
+const porPagina = 10;
+
+function seleccionarProducto(data) {
+  document.getElementById("codigoSel").value = data.codigoBarra;
+  document.getElementById("conceptoSel").value = data.concepto;
+  document.getElementById("precioSel").value = data.precioPublico;
+  document.getElementById("preview").innerText =
+    `${data.concepto} — $${data.precioPublico}`;
+}
+
+function agregarItem() {
+  const codigo = document.getElementById("codigoSel").value;
+  const concepto = document.getElementById("conceptoSel").value;
+  const precio = parseFloat(document.getElementById("precioSel").value);
+  let cantidad = parseFloat(document.getElementById("cantidad").value);
+
+  if (!codigo || cantidad <= 0) return;
+
+  const existente = carrito.find(i => i.codigo === codigo);
+  if (existente) existente.cantidad += cantidad;
+  else carrito.push({ codigo, concepto, precio, cantidad });
+
+  renderTabla();
+}
+
+function renderTabla() {
+  const tabla = document.getElementById("tabla");
+  tabla.innerHTML = "";
+
+  carrito.forEach((it, i) => {
+    tabla.innerHTML += `
+      <tr>
+        <td>${it.codigo}</td>
+        <td>${it.concepto}</td>
+        <td>${it.cantidad}</td>
+        <td>$${it.precio.toFixed(2)}</td>
+        <td><button onclick="eliminarItem(${i})">❌</button></td>
+      </tr>`;
+  });
+}
+
+window.eliminarItem = (i) => {
+  carrito.splice(i, 1);
+  renderTabla();
+};
+
+
+/* ==========================================================
+   🟪 CARGAR VENDEDOR POR RUTA
+========================================================== */
+async function cargarVendedor() {
+  const ruta = document.getElementById("ruta").value;
+  if (!ruta) return;
+
+  const q = query(
+    collection(db, "usuarios_ruta"),
+    where("rutaId", "==", ruta),
+    where("activo", "==", true)
+  );
+
+  const snap = await getDocs(q);
+
+  if (!snap.empty) {
+    const vendedor = snap.docs[0].data().nombre;
+    document.getElementById("vendedor").value = vendedor;
+  } else {
+    document.getElementById("vendedor").value = "No asignado";
+  }
+}
+
+
+/* ==========================================================
+   🟫 INIT
+========================================================== */
+document.addEventListener("DOMContentLoaded", async () => {
+  await syncProductos();
+
+  document.getElementById("ruta").addEventListener("change", cargarVendedor);
+  document.getElementById("btnBuscarCodigo").addEventListener("click", buscarPorCodigo);
+  document.getElementById("btnBuscarNombre").addEventListener("click", buscarPorNombre);
+
+  document.getElementById("busquedaNombre").addEventListener("input", async e => {
+    const term = e.target.value.toLowerCase();
+    const productos = await getAllProductos();
+    resultadosBusqueda = productos.filter(p =>
+      p.concepto.toLowerCase().includes(term)
+    );
+  });
+});
+
 </script>
 
 </head>
@@ -108,7 +332,7 @@
 
 <div class="contenedor">
 
-  <!-- SECCIÓN RUTA -->
+  <!-- RUTA -->
 <select id="ruta">
   <option value="">Seleccione ruta</option>
   <option value="Almacen_Ruta_1">Ruta 1</option>
@@ -124,6 +348,11 @@
     <button id="btnBuscarCodigo">Buscar Código</button>
     <button id="btnBuscarNombre">Buscar Nombre</button>
   </div>
+
+  <!-- PREVIEW -->
+  <input id="codigoSel" hidden>
+  <input id="conceptoSel" hidden>
+  <input id="precioSel" hidden>
 
   <div id="preview" style="font-weight:bold; margin:5px 0;"></div>
 
@@ -145,27 +374,19 @@
   </table>
 
   <!-- BOTÓN -->
-  <button id="btnTraspaso" style="margin-top:12px; width:100%;">
-    Finalizar Traspaso
-  </button>
+  <button id="btnTraspaso" style="margin-top:12px; width:100%;">Finalizar Traspaso</button>
 
 </div>
 
-<!-- =======================
-     🟦 MODAL DE BÚSQUEDA
-======================= -->
+
+<!-- MODAL -->
 <div id="modalResultados">
   <div class="modalCaja">
     <button id="cerrarModal" style="float:right;">Cerrar</button>
     <h3>Buscar Producto</h3>
 
     <input id="busquedaNombre" placeholder="Escribe nombre...">
-
     <div id="listaResultados" style="max-height:300px; overflow:auto;"></div>
-
-    <button id="btnAnterior">Anterior</button>
-    <button id="btnSiguiente">Siguiente</button>
-    <div id="paginacion" style="margin-top:5px;"></div>
   </div>
 </div>
 
